2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Provide gettext support.

	* configure.ac: Update for gettext.
	* Makefile.am: Add libepc/i18n.c. Define LOCALEDIR.
	Add po folder and other gettext related stuff.
	* libepc/consumer.c, libepc/publisher.c, libepc/shell.c, libepc/tls.c,
	libepc-ui/password-dialog.c, libepc-ui/progress-window.c:
	Include libepc/i18n.h instead of glib/gi18n-lib.h.
	* libepc/i18n.c, libepc/i18n.h: Add epc_gettext.
	* examples/simple-publisher.c: Call setlocale for localization.
	* ABOUT-NLS, config.rpath, m4/*, po/*: Various gettextize artifacts.
	* po/de.po, po/LINGUAS: Add German translation.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac, Makefile.am: Integerate GNU gettext.
	* libepc/consumer.c, libepc/shell.c:

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Support building with srcdir != builddir - as far as possible:
	gtk-doc seems to be totaly broken regarding that topic.

	* libepc/*.c: Prefix local includes with libepc/.
	* Makefile.am: Use $(srcdir) where needed.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Include just <libsoup/soup.h> when possible.

	* libepc/consumer.c: Include just <libsoup/soup.h>.
	* libepc/publisher.c: Include <libsoup/soup.h> instead of
	<libsoup/soup-socket.h>. All the other API isn't exported by
	<libsoup/soup.h> for some reason.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Update year in copyright information.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Check for aui_service_dialog_set_service_type_name by feature,
	instead of checking the pkg-config version.

	* configure.ac: Use AC_CHECK_LIB instead of pkg-config to detect
	aui_service_dialog_set_service_type_name.
	* examples/consumer-ui.c: Use HAVE_SET_SERVICE_TYPE_NAME macro,
	instead of HAVE_AVAHI_UI_0_6_22. Include "config.h"".
	* Makefile.am: Drop HAVE_AVAHI_UI_0_6_22 hackery.

2008-01-15  Mathias Hasselmann  <mathias@openismus.com>
