@@ -1,5 +1,15 @@
 2008-01-16  Mathias Hasselmann  <mathias@openismus.com>
 
+	Separate between primary and secondary message in EpcPasswordDialog to
+	match appearance of GtkMessageDialog. Correct label alignment issues.
+
+	* libepc-ui/password-dialog.c: Add separate title label for primary
+	message. Left-align username and password label. Give more space to
+	characters to secondary label.
+	* po/libepc.pot, po/de.po: Updating messages.
+
+2008-01-16  Mathias Hasselmann  <mathias@openismus.com>
+
 	Provide gettext support.
 
 	* configure.ac: Update for gettext.
@@ -15,7 +25,7 @@
 
 2008-01-16  Mathias Hasselmann  <mathias@openismus.com>
 
-	* configure.ac, Makefile.am: Integerate GNU gettext.
+	* configure.ac, Makefile.am: Integrate GNU gettext.
 	* libepc/consumer.c, libepc/shell.c:
 
 2008-01-16  Mathias Hasselmann  <mathias@openismus.com>
